--- a/haskell_core.hsproj/hapy-skell.cabal
+++ b/haskell_core.hsproj/hapy-skell.cabal
@@ -1,4 +1,4 @@
-name: haskellcore
+name: hapy-skell
 version: 1.0
 cabal-version: 1.11
 build-type: Simple
@@ -6,7 +6,7 @@ license: AllRightsReserved
 stability: experimental
 x-ghc-framework-version: 7.10.3-5.9-2
 x-last-ide-version: HfM1.2.1
-Executable haskellcore
+Executable hapyskell
   main-is: Haskell_core.hs
   buildable: True
   build-depends:
@@ -18,6 +18,6 @@ Executable haskellcore
       unix -any
   other-modules:
       Structures
+      Utils.JSON
       Utils.Logging
-      JSON_Parser
       Manager
